Typed up the recipe for Mole's Favourite and formatted it in HTML.

--- a/recipes/tater-pie.html
+++ b/recipes/tater-pie.html
@@ -5,8 +5,42 @@
         <meta-charset="UTF-8">
     </head>
     <body>
-
-
-        
+        <h1>Mole's Favourite, Deeper'n'Ever, Turnip'n'Tater'n'Beetroot Pie Recipe</h1>
+        <p>I've loved to read my entire life.  Growing up, I devoured multiple books a week.  If I was inside, I was probably on the couch or in bed with
+            a book.  If I was outside, I was probably sitting on the swing with a book.  Going to libraries or bookstores was my idea of the perfect outing.
+            I hoarded books and had numerous favourite authors and series.  In elementary school, the <em>Redwall</em> series was at the top of that list.
+        </p>
+        <p>The <em>Redwall</em> books are a beautifully descriptive book series full of anthropomorphic woodland creatures.  They fight, love, display 
+            compassion and bravery...and most of all, they <em>eat.</em>  And oh, how they eat!  Delicious feasts and humble meals, decadent desserts and rich 
+            road foot, drinks, candies, salads, soups...All are described in exquisite detail.
+        </p>
+        <p>As a child I was thrilled to discover an official cookbook for the <em>Redwall</em> series.  I've cooked from it often in my life, but my favourite 
+            recipes have been memorized, tweaked, and perfected as I've grown up.  Here's one of the best from the lot.  It's a hearty, filling meal full of 
+            root vegetables, and is perfect for a chilly autumn evening.
+        </p>
+        <h2>You will need...</h2>
+        <ul>
+            <li>Potatoes (any will do, but Yukon Gold are my favourite for this)</li>
+            <li>Carrots</li>
+            <li>Turnip</li>
+            <li>Beetroot</li>
+            <li>Rutabaga</li>
+            <li>Garlic cloves</li>
+            <li>Salt and pepper to taste</li>
+            <li>Rosemary and thyme - fresh, if you've got 'em!</li>
+            <li>Olive oil</li>
+        </ul>
+        <h2>Cooking time!</h2>
+        <ol>
+            <li>Peel the vegetables if that's your preference, or leave the skin on for more flavour.</li>
+            <li>Mince the garlic, and dice all the other veggies.</li>
+            <li>Heat the oven to 400 degrees Fahrenheit.</li>
+            <li>Use olive oil to grease a glass pan.</li>
+            <li>Pour vegetables into the pan.  Add some olive oil, salt and pepper, and your herbs.</li>
+            <li>Cover the pan with foil.  Bake for 1 hour and 15 minutes, or until all vegetables are soft.</li>
+        </ol>
+        <p>These meal is fantastic and naturally vegan, but if you'd like you can also add cheese or ground beef (or both!)  Both are fantastic in Mole's Favourite.
+        </p>
+        <p>Happy eating!</p>
     </body>
 </html>
