Typed up final recipe and formatted main page.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <meta-charset="UTF-8">
     </head>
     <body>
-
-
+        <h1>Delicious recipes!</h1>
+        <ul>
+            <a href="recipes/spaghetti.html"><li>Spaghetti</li></a>
+            <a href="recipes/tater-pie.html"><li>Roasted Roots</li></a>
+            <a href="recipes/cookies.html"><li>Peanut Butter oatmeal cookies</li></a>
+        </ul>
         
     </body>
 </html>
