--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -5,7 +5,43 @@
         <meta-charset="UTF-8">
     </head>
     <body>
-
+        <h1>Peanut Butter Oatmeal Cookies</h1>
+        <p>My grandfather was a professional candy-maker.  He traveled the fair circuit before I was born, making and selling fudge, divinity, and these cookies.
+            By the time I was born he had long since retired - but in his workshop he kept the big kopper pot, the marble slab for rolling the fudge, and all of
+            his tools.  From time to time the extended family would get together and whip up a few batches of fudge the old-fashioned way - making forty to eighty
+            pounds in one day.  It would then be distributed as gifts.
+        </p>
+        <p>Of course, making such large batches wasn't exactly convenient for day to day treats.  After much trial and tribulation, we were able to come up with a 
+            stovetop variant of the peanut butter oatmeal cookies.  They were a holiday treat when I was a kid; we always left these specific cookies out for Santa 
+            on Christmas Eve.
+        </p>
+        <p>It's a deceptively easy recipe!  Simple ingredients make whipping up a batch a snap...but the temperature and timing are very important to make sure 
+            the cookies set up right.
+        </p>
+        <h2>You will need...</h2>
+        <ul>
+            <li>1 cup peanut butter</li>
+            <li>1/2 cup milk</li>
+            <li>1/2 cup butter</li>
+            <li>2 cups sugar</li>
+            <li>3 cups oatmeal</li>
+            <li>One dash vanilla</li>
+        </ul>
+        <h2>Cooking time!</h2>
+        <ol>
+            <li>Lay out parchment paper in preparation for the cookies.</li>
+            <li>Melt the butter in a large pot on the stove.</li>
+            <li>Add sugar and milk.  Stir.</li>
+            <li>Heat the mixture until boiling.</li>
+            <li>Stir continuously at a high boil for 1 minute.</li>
+            <li>Turn off heat and add peanut butter.  Stir until combined.</li>
+            <li>Add oatmeal.  Stir quickly - the cookies will begin to set.</li>
+            <li>Scoop cookie-sized dollops of the mixture onto the parchment paper.</li>
+            <li>Lick the spoon!</li>
+            <li>Allow to cool - they'll set as their temperature reduces.</li>
+            <li>Enjoy - and leave one out for Santa!</li>
+        </ol>
+        <p>Happy eating!</p>
 
         
     </body>
