--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -5,7 +5,7 @@
         <meta-charset="UTF-8">
     </head>
     <body>
-        <h1>Spaghetti</h1>
+        <h1>Spaghetti Recipe</h1>
         <p>Growing up, spaghetti was always a treat at my house.  My mom always made it with Italian sausage,
             and would usually serve corn or garlic bread (or both!) on the side.  We'd wrap the noodles around
             our forks and dig in on special occasions.
@@ -14,16 +14,14 @@
             jarred spaghetti sauce, and noodles.  I still love it as a simple go-to meal, but I've become enamored
             of how easy it is to spruce it up with just a few ingredients.
         </p>
+        <p>I have Celiac disease, so I cook this with rice noodles. My husband actually prefers them to regular noodles - 
+            they're a little less heavy, and have a milder taste.  However, use whatever kind of noodles <em>you</em> prefer!
+        </p>
         <p>From my table to yours, here's the tastiest way to cook spaghetti that I've found.  I hope it brings you joy!
         </p>
         <h2>You will need...</h2>
         <ul>
-            <li>Rice noodles
-                    <p>You can use regular spaghetti noodles if you'd like!  However, I've found that rice noodles
-                        tend to be less heavy than wheat or corn noodles.  They're also great for cooking for anyone
-                        with Celiac - like me!
-                    </p>
-            </li>
+            <li>Rice noodles</li>
             <li>Ground beef or Italian sausage</li>
             <li>Garlic cloves (I use an entire head)</li>
             <li>1 yellow onion</li>
@@ -45,5 +43,6 @@
             <li>Reduce heat to low.  Add jarred sauce, salt, pepper, and basil.  Stir frequently until heated through.</li>
             <li>Scoop sauce over noodles and enjoy!</li>
         </ol>
+        <p>Happy eating!</p>
     </body>
 </html>
