--- a/recipes/tater-pie.html
+++ b/recipes/tater-pie.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mole's Favourite, Deeper'n'Ever, Turnip'n'Tater'n'Beetroot Pie Recipe</title>
+        <title>Roasted Roots Recipe</title>
         <meta-charset="UTF-8">
     </head>
     <body>
-        <h1>Mole's Favourite, Deeper'n'Ever, Turnip'n'Tater'n'Beetroot Pie Recipe</h1>
+        <h1>Roasted Roots Recipe</h1>
         <p>I've loved to read my entire life.  Growing up, I devoured multiple books a week.  If I was inside, I was probably on the couch or in bed with
             a book.  If I was outside, I was probably sitting on the swing with a book.  Going to libraries or bookstores was my idea of the perfect outing.
             I hoarded books and had numerous favourite authors and series.  In elementary school, the <em>Redwall</em> series was at the top of that list.
@@ -15,8 +15,8 @@
             road foot, drinks, candies, salads, soups...All are described in exquisite detail.
         </p>
         <p>As a child I was thrilled to discover an official cookbook for the <em>Redwall</em> series.  I've cooked from it often in my life, but my favourite 
-            recipes have been memorized, tweaked, and perfected as I've grown up.  Here's one of the best from the lot.  It's a hearty, filling meal full of 
-            root vegetables, and is perfect for a chilly autumn evening.
+            recipes have been memorized, tweaked, and perfected as I've grown up.  Here's one of the best from the lot - known in the books as Mole's Favourite, 
+            Deeper'n'Ever, Turnip'n'Tater'n'Beetroot Pie.  It's a hearty, filling meal full of root vegetables, and is perfect for a chilly autumn evening.
         </p>
         <h2>You will need...</h2>
         <ul>
@@ -39,7 +39,7 @@
             <li>Pour vegetables into the pan.  Add some olive oil, salt and pepper, and your herbs.</li>
             <li>Cover the pan with foil.  Bake for 1 hour and 15 minutes, or until all vegetables are soft.</li>
         </ol>
-        <p>These meal is fantastic and naturally vegan, but if you'd like you can also add cheese or ground beef (or both!)  Both are fantastic in Mole's Favourite.
+        <p>This meal is fantastic and naturally vegan, but if you'd like you can also add cheese or ground beef (or both!)  Both are fantastic additions.
         </p>
         <p>Happy eating!</p>
     </body>
