Added images. Did a little CSS for visuals.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
     <head>
         <title>Recipe Directory</title>
         <meta-charset="UTF-8">
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>Delicious recipes!</h1>
+        <center><h1>Delicious recipes!</h1>
+            <img src="recipes/images/Spaghetti.jpg" height=150px>
+            <img src="recipes/images/roasted-roots.jpg" height=150px>
+            <img src="recipes/images/Peanut-Butter-Cookies.jpg" height=150px>
         <ul>
             <a href="recipes/spaghetti.html"><li>Spaghetti</li></a>
             <a href="recipes/tater-pie.html"><li>Roasted Roots</li></a>
-            <a href="recipes/cookies.html"><li>Peanut Butter oatmeal cookies</li></a>
-        </ul>
+            <a href="recipes/cookies.html"><li>Peanut Butter Oatmeal Cookies</li></a>
+        </ul></center>
         
     </body>
 </html>
