--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -3,11 +3,13 @@
     <head>
         <title>Peanut Butter Oatmeal Cookie Recipe</title>
         <meta-charset="UTF-8">
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>Peanut Butter Oatmeal Cookies</h1>
+        <center><img src="images/Peanut-Butter-Cookies.jpg" height=400px>
+        <h1>Peanut Butter Oatmeal Cookies</h1></center>
         <p>My grandfather was a professional candy-maker.  He traveled the fair circuit before I was born, making and selling fudge, divinity, and these cookies.
-            By the time I was born he had long since retired - but in his workshop he kept the big kopper pot, the marble slab for rolling the fudge, and all of
+            By the time I was born he had long since retired - but in his workshop he kept the big copper pot, the marble slab for rolling the fudge, and all of
             his tools.  From time to time the extended family would get together and whip up a few batches of fudge the old-fashioned way - making forty to eighty
             pounds in one day.  It would then be distributed as gifts.
         </p>
