--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -3,16 +3,18 @@
     <head>
         <title>Spaghetti Recipe</title>
         <meta-charset="UTF-8">
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>Spaghetti Recipe</h1>
+        <center><img src="images/Spaghetti.jpg" height=400px>
+        <h1>Spaghetti Recipe</h1></center>
         <p>Growing up, spaghetti was always a treat at my house.  My mom always made it with Italian sausage,
             and would usually serve corn or garlic bread (or both!) on the side.  We'd wrap the noodles around
             our forks and dig in on special occasions.
         </p>
         <p>My mom's recipe, while delicious, was also pretty basic.  Italian sausage cooked with minced garlic,
             jarred spaghetti sauce, and noodles.  I still love it as a simple go-to meal, but I've become enamored
-            of how easy it is to spruce it up with just a few ingredients.
+            by how easy it is to spruce it up with just a few ingredients.
         </p>
         <p>I have Celiac disease, so I cook this with rice noodles. My husband actually prefers them to regular noodles - 
             they're a little less heavy, and have a milder taste.  However, use whatever kind of noodles <em>you</em> prefer!
