--- a/recipes/tater-pie.html
+++ b/recipes/tater-pie.html
@@ -3,16 +3,18 @@
     <head>
         <title>Roasted Roots Recipe</title>
         <meta-charset="UTF-8">
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>Roasted Roots Recipe</h1>
+        <center><img src="images/roasted-roots.jpg" height=400px>
+        <h1>Roasted Roots Recipe</h1></center>
         <p>I've loved to read my entire life.  Growing up, I devoured multiple books a week.  If I was inside, I was probably on the couch or in bed with
             a book.  If I was outside, I was probably sitting on the swing with a book.  Going to libraries or bookstores was my idea of the perfect outing.
             I hoarded books and had numerous favourite authors and series.  In elementary school, the <em>Redwall</em> series was at the top of that list.
         </p>
         <p>The <em>Redwall</em> books are a beautifully descriptive book series full of anthropomorphic woodland creatures.  They fight, love, display 
             compassion and bravery...and most of all, they <em>eat.</em>  And oh, how they eat!  Delicious feasts and humble meals, decadent desserts and rich 
-            road foot, drinks, candies, salads, soups...All are described in exquisite detail.
+            road food, drinks, candies, salads, soups...All are described in exquisite detail.
         </p>
         <p>As a child I was thrilled to discover an official cookbook for the <em>Redwall</em> series.  I've cooked from it often in my life, but my favourite 
             recipes have been memorized, tweaked, and perfected as I've grown up.  Here's one of the best from the lot - known in the books as Mole's Favourite, 
@@ -39,7 +41,7 @@
             <li>Pour vegetables into the pan.  Add some olive oil, salt and pepper, and your herbs.</li>
             <li>Cover the pan with foil.  Bake for 1 hour and 15 minutes, or until all vegetables are soft.</li>
         </ol>
-        <p>This meal is fantastic and naturally vegan, but if you'd like you can also add cheese or ground beef (or both!)  Both are fantastic additions.
+        <p>This meal is fantastic and naturally vegan, but if you'd like you can also add cheese or ground beef (or both!).  Both are fantastic additions.
         </p>
         <p>Happy eating!</p>
     </body>
